--- a/app/src/main/res/layout/add_jobadvert_step1.xml
+++ b/app/src/main/res/layout/add_jobadvert_step1.xml
@@ -83,7 +83,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="15dp"
-                            android:hint="Sektör Bilgisi Seçiniz-->"
+                            android:hint="Sektör Bilgisi Seçiniz    -->"
                             android:imeOptions="actionDone"
                             android:singleLine="true"
                             android:textColor="@color/Tomato"
@@ -131,7 +131,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="15dp"
-                            android:hint="Meslek Bilgisi Seçiniz"
+                            android:hint="Meslek Bilgisi Seçiniz    -->"
                             android:imeOptions="actionDone"
                             android:singleLine="true"
                             android:textColor="@color/Tomato"
