--- a/app/src/main/res/drawable-xhdpi/left_rounded.xml
+++ b/app/src/main/res/drawable-xhdpi/left_rounded.xml
@@ -3,11 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:shape="rectangle">
-    <solid android:color="@color/retro"> </solid>
+    <solid android:color="@color/white"></solid>
     <corners
-        android:bottomLeftRadius="15dp"
-        android:topLeftRadius="15dp"
-        />
-
+        android:bottomLeftRadius="20dp"
+        android:topLeftRadius="20dp" />
+    <stroke
+        android:width="1dp"
+        android:color="@color/orange"></stroke>
 
 </shape>
