--- a/app/src/main/res/drawable/diagonal_back2.xml
+++ b/app/src/main/res/drawable/diagonal_back2.xml
@@ -1,22 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/pic03"/>
-    <item>
-        <bitmap android:src="@drawable/pic03" android:gravity="center" android:alpha="0.1"/>
-    </item>
-
-    <item android:top="200dp"
-        android:bottom="-0dp"
-        android:left="-100dp"
-        android:right="0dp">
+    <item android:drawable="@android:color/transparent" />
+    <item
+        android:bottom="-100dp"
+        android:left="0dp"
+        android:right="-200dp"
+        android:top="100dp">
         <rotate
-            android:fromDegrees="10"
+            android:fromDegrees="-13"
             android:pivotX="0%"
-            android:pivotY="200%">
-            <shape
-                android:shape="rectangle">
-                <solid
-                    android:color="?android:colorBackground"/>
+            android:pivotY="100%">
+            <shape android:shape="rectangle">
+                <solid android:color="@color/white" />
             </shape>
         </rotate>
     </item>
