--- a/app/src/main/res/drawable/rect_back.xml
+++ b/app/src/main/res/drawable/rect_back.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="3dp"> </corners>
-            <solid android:color="@color/retro8" />
+            <solid android:color="@color/mypurple" />
         </shape>
     </item>
     <!--
