--- a/app/src/main/res/drawable/right_rounded.xml
+++ b/app/src/main/res/drawable/right_rounded.xml
@@ -3,11 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:shape="rectangle">
-    <solid android:color="@color/retro"> </solid>
+    <solid android:color="@color/white"> </solid>
     <corners
-        android:bottomRightRadius="15dp"
-        android:topRightRadius="15dp"
+        android:bottomRightRadius="20dp"
+        android:topRightRadius="20dp"
         />
-
+<stroke android:color="@color/SeaGreen" android:width="1dp"></stroke>
 
 </shape>
