--- a/app/src/main/res/layout/jobsearch23.xml
+++ b/app/src/main/res/layout/jobsearch23.xml
@@ -17,6 +17,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:background="@color/white">
 
 
@@ -49,6 +51,8 @@
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/categoryList"
+                android:layout_marginStart="3dp"
+                android:layout_marginEnd="3dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
