--- a/app/src/main/res/layout/success_dialog_jobadvert.xml
+++ b/app/src/main/res/layout/success_dialog_jobadvert.xml
@@ -4,18 +4,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginBottom="50dp"
-    android:layout_centerInParent="true"
     android:background="@android:color/transparent">
 
     <RelativeLayout
         android:id="@+id/topRelative"
-        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_gravity="center"
         android:layout_marginBottom="50dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="50dp"
         android:background="@drawable/dialogcorner">
 
         <LinearLayout
@@ -30,8 +29,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
-                android:outlineProvider="bounds"
-                android:gravity="center">
+                android:gravity="center"
+                android:outlineProvider="bounds">
 
                 <ImageView
                     android:layout_width="75dp"
@@ -63,29 +62,29 @@
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="15dp" />
-<!--
-            <Button
-                android:id="@+id/publishBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="30dp"
-                android:background="@drawable/greenback"
-                android:padding="20dp"
-                android:text="YAYINLAMAK İSTİYORUM "
-                android:textColor="@color/white"
+            <!--
+                        <Button
+                            android:id="@+id/publishBtn"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginBottom="30dp"
+                            android:background="@drawable/greenback"
+                            android:padding="20dp"
+                            android:text="YAYINLAMAK İSTİYORUM "
+                            android:textColor="@color/white"
 
-                />
--->
+                            />
+            -->
             <org.altervista.andrearosa.statebutton.StateButton
                 android:id="@+id/publishBtn"
                 style="@style/StateButton_md_greenStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="30dp"
                 android:layout_marginEnd="10dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginBottom="30dp"
                 android:textAlignment="center"
                 app:disabledIcon="@drawable/ic_done_all_black_10dp"
                 app:disabledText="İlanınız Yayınlandı"
@@ -94,20 +93,19 @@
         </LinearLayout>
 
 
-
-
     </RelativeLayout>
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/closeDialog2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-       app:rippleColor="@color/OrangeRed"
-        app:layout_anchorGravity="end|top"
-        app:layout_anchor="@+id/success_top"
         android:src="@drawable/ic_close_black_24dp"
         android:tint="@color/black"
         app:backgroundTint="@color/white"
         app:elevation="6dp"
-        app:fabSize="mini" />
+        app:fabSize="mini"
+        app:layout_anchor="@+id/success_top"
+        app:layout_anchorGravity="end|top"
+        app:rippleColor="@color/OrangeRed" />
 
 </android.support.design.widget.CoordinatorLayout>
