--- a/app/src/main/res/layout/filtertextview.xml
+++ b/app/src/main/res/layout/filtertextview.xml
@@ -16,7 +16,7 @@
             android:id="@+id/tagText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/tag_back"
+            android:background="@drawable/btnback2"
             android:padding="5dp"
             android:text="Var"
             android:textAlignment="center"
