--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,6 +18,13 @@
         
 
     </style>
+    <style name="BottomSheetUptoBottomAnimation">
+
+        <item name="android:windowEnterAnimation">@anim/bottomsheet_enter</item>
+        <item name="android:windowExitAnimation">@anim/bottomsheet_exit</item>
+
+
+    </style>
 
     <style name="AppTheme2" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
